# rust-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
rustui-client/: Cargo.toml
rustui-client/src/: lib.rs  main.rs
rustui-server/: Cargo.toml
rustui-server/src/: main.rs
src/: lib.rs  main.rs
