[workspace]
resolver = "3"
members = [
    "rustui-client",
    "rustui-server",
]

[workspace.dependencies]
crossterm = "0.29.0"
tui = "0.19.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
